--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_course",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
   "description": "Complete Node.js Guide",
   "main": "app.js",
@@ -8,24 +8,16 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lei1996/nodejs_TheCompleteGuide.git"
-  },
-  "author": "lin",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lei1996/nodejs_TheCompleteGuide/issues"
-  },
-  "homepage": "https://github.com/lei1996/nodejs_TheCompleteGuide#readme",
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.2",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "pug": "^2.0.3"
   }
 }
